Multi Cluster/Cluster 2/Factory/factory1-deployment-cluster2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factory1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factory1
  template:
    metadata:
      labels:
        app: factory1
    spec:
      containers:
      - name: factory1-container
        image: istsmerafarlho/projpeci:factory1-deployment-cluster2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: factory1-service
spec:
  selector:
    app: factory1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
