Multi Cluster/Cluster 2/Factory/factory2-deployment-cluster2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factory2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: factory2
  template:
    metadata:
      labels:
        app: factory2
    spec:
      containers:
      - name: factory2-container
        image: dbicho/projpeci:factory-image2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: factory2-service
spec:
  selector:
    app: factory2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
