Multi Cluster/Cluster 2/Factory/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: factory1-service-virtual-service
spec:
  hosts:
  - factory1-service.default.global
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: factory1-service.default.global
        subset: v1
      weight: 100
